deploy/internal/services/mosquitto/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      securityContext:
        fsGroup: 33
      containers:
      - image: eclipse-mosquitto:latest
        name: mosquitto
        resources:
          requests:
            cpu: "5m"
            memory: "32Mi"
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 1883
          name: mosquitto
        volumeMounts:
        - name: mosquitto-persistent-storage
          mountPath: /mosquitto/data
        - name: mosquitto-password
          mountPath: /mosquitto/config/password.txt
          subPath: password.txt
        - name: mosquitto-config
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
      volumes:
      - name: mosquitto-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-mosquitto
      - name: mosquitto-password
        secret:
          secretName: mosquitto-password
          items:
          - key: "password.txt"
            path: "password.txt"
      - name: mosquitto-config
        configMap:
          name: mosquitto-config
          items:
          - key: "mosquitto.conf"
            path: "mosquitto.conf"
