deploy/internal/services/mosquitto/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  ports:
    - port: 1883
      targetPort: 1883
      name: mosquitto
  selector:
    app: mosquitto
